# hpfpp-solutions

./: README.md
ch01/: exercises.txt
ch02/: Exercises.hs  Func.hs  Vars.hs
ch03/: exercises.hs  print2.hs  print3broken.hs  print3flipped.hs  reverse.hs
ch04/: exercises.hs  mood.hs
ch05/: arith3broken.hs  curry.hs  exercises.hs  exercises_fixit.hs  lambda.hs  parametricity.hs  typeInference1.hs
ch06/: eq.hs  typeclass.hs
ch06/exercises/: impl-from-types.hs  multiple_choice.txt  typecheck.hs  typematch.hs
ch07/: dodgy.hs  grab-bag.hs
ch07/exercises/: choice.txt  exercises.hs
ch08/: apply-times.hs
ch08/exercises/: div.hs  recursion.hs  wordnumber.hs
ch09/: crash.hs  symmetry.hs  zip.hs
ch09/exercises/: char.hs  cipher.hs  std.hs
ch10/: db.hs  fib.hs  folds.hs
ch10/exercises/: review.hs  std-fold.hs
ch11/: binarytree.hs  cardinality.hs  ctor-dtor.hs  newtype.hs  normalform.hs  sumtype.hs  typeclass.hs  vehicles.hs
ch11/exercises/: aspatterns.hs  cipher.hs  expr.hs  language.hs  phone.hs
ch12/: person.hs
ch12/exercises/: libeither.hs  libmaybe.hs  natural.hs  string.hs  unfold.hs
ch13/: CipherInteractive.hs  ForeverPalindrome.hs  person.hs
ch13/hangman/: hangman.cabal
ch13/hangman/src/: Main.hs
ch14/addition/: addition.cabal
ch14/addition/src/: Addition.hs
ch14/cipher/: cipher.cabal
ch14/cipher/src/: Cipher.hs
ch14/cipher/tests/: Main.hs
ch14/hangman/: hangman.cabal
ch14/hangman/src/: Main.hs  Puzzle.hs  RandomWord.hs
ch14/hangman/tests/: Main.hs  TestPuzzle.hs
ch14/morse/: morse.cabal
ch14/morse/src/: Main.hs  Morse.hs
ch14/morse/tests/: tests.hs
ch14/wordnumber/: wordnumber.cabal
ch14/wordnumber/src/: WordNumber.hs
ch14/wordnumber/tests/: Gen.hs  Main.hs
ch15/: bull.hs  madness.hs  maybemonoid.hs  monoidproperty.hs  optional.hs
ch15/exercises/: monoid.hs  monoid_mem.hs  semigroup.hs
ch15/orphan_instance/: Listy.hs  ListyInstances.hs
ch16/: laws.hs  lift.hs  possibly.hs  structure.hs
ch16/exercises/: instance.hs  rearrange.hs  valid.hs
ch17/: constant.hs  cow.hs  fix.hs  identity.hs  lookup.hs  person.hs  possibilities.hs
ch17/check-laws/: README.md  check-laws.cabal
ch17/check-laws/tests/: Main.hs
ch18/: bind.hs  composition.hs  cow.hs  either.hs  sum.hs
ch18/exercises/: exercises.cabal
ch18/exercises/test/: Main.hs
ch19/shawty/src/: Main.hs
ch20/: instances.hs
ch20/exercises/: data-instances.hs  std.hs
ch21/: http.hs
ch21/exercises/: instances.hs
ch22/: function-applicative.hs  reader.hs  warmup.hs
ch22/exercises/: readerpractice.hs
ch22/exercises/shawty/: shawty.cabal
ch22/exercises/shawty/src/: Main.hs
ch23/: random-example.hs  state.hs
ch24/: ex.ini  fractions.hs  learn.hs  marshalling.hs  parseINI.hs
ch24/exercises/: ip.hs  log.hs  phone.hs  pos-int.hs  semver.hs
ch25/: bifunctor.hs  compose.hs  identity.hs
ch26/: EitherT.hs  LiftMore.hs  MaybeT.hs  ReaderT.hs  StateT.hs  embedded.hs  scotty.hs
ch26/exercises/: URICounter.hs  code.hs  fix.hs
ch27/: evaluate.hs
ch27/exercises/: StrictList.hs  bottom.hs  sprint.hs
ch28/: bench.hs  caf.hs
ch28/exercises/: DList.hs  Queue.hs
ch29/exercises/: Cipher.hs  parseINI.hs
ch29/exercises/iniDir/: 1.ini  2.ini
ch31/fingerd/: finger.db  fingerd.cabal
ch31/fingerd/src/: Debug.hs  Main.hs  ModifyUsers.hs  User.hs  UserDB.hs
