name:                cipher
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/cipher#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Cipher
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

test-suite tests
  hs-source-dirs:      tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , cipher
                     , QuickCheck
