name:                hangman
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/eozd/hangman
license:             BSD3
license-file:        LICENSE
author:              Esref Ozdemir
maintainer:          esref.ozdemir27@gmail.com
copyright:           2018 Esref Ozdemir
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  data/dict.txt

library
  exposed-modules:     Puzzle
                     , RandomWord
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Puzzle
                     , RandomWord
  build-depends:       base >= 4.7 && < 5
                     , hangman
                     , random

test-suite tests
  ghc-options:        -Wall -fno-warn-orphans
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  other-modules:      TestPuzzle
  hs-source-dirs:     tests
  build-depends:      base
                    , hangman
                    , hspec
                    , QuickCheck
  default-language:   Haskell2010

