name:                fingerd
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/eozd/fingerd#readme
license:             BSD3
license-file:        LICENSE
author:              Esref Ozdemir
maintainer:          esref.ozdemir27@gmail.com
copyright:           2018 Esref Ozdemir
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable modify_user
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             ModifyUsers.hs
  other-modules:       User
                     , UserDB
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , raw-strings-qq
                     , sqlite-simple
                     , text
                     , transformers

executable debug
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Debug.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , network

executable fingerd
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       User
                     , UserDB
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , network
                     , raw-strings-qq
                     , sqlite-simple
                     , text
