name:                shawty
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/eozd/shawty#readme
license:             BSD3
license-file:        LICENSE
author:              Esref Ozdemir
maintainer:          esref.ozdemir27@gmail.com
copyright:           2018 Esref Ozdemir
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable shawty
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , hedis
                     , mtl
                     , network-uri
                     , random
                     , scotty
                     , semigroups
                     , text
                     , transformers
  default-language:    Haskell2010
